# zukofi

./: .gitignore  Cargo.toml  README.md  run-servers.sh
backend/: Cargo.toml
backend-node/: index.js  package.json  pnpm-lock.yaml  utils.js
backend-rs/: Cargo.toml
backend-rs/src/: crs.rs  decrypt.rs  main.rs  setup.rs  verify.rs
backend/src/: crs.rs  encrypt.rs  main.rs  setup.rs
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/contracts/: deployedContracts.ts
frontend/hooks/scaffold-eth/: index.ts
frontend/pages/api/: verify.ts
frontend/scripts/: dump_crs.ts
frontend/src/: App.tsx
frontend/utils/: tfhe.ts
frontend/utils/scaffold-eth/: networks.ts
nextjs/: package.json  pnpm-lock.yaml
nextjs/.next/server/: server-reference-manifest.js  server-reference-manifest.json
nextjs/app/: page.tsx
nextjs/components/: Footer.tsx  Header.tsx
nextjs/pages/api/: verify.ts
nextjs/utils/: zupassConstants.ts
nextjs/utils/scaffold-eth/: pcd.ts
src/: encrypt.rs  main.rs  setup.rs  verify.rs
