[package]
name = "tfhe-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.6.1", features = [
    "boolean",
    "shortint",
    "integer",
    "aarch64-unix",
    # "x86_64-unix",
    "zk-pok-experimental",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rocket = "0.5.1"
rocket_cors = "0.6.0"

# [patch.crates-io]
# tfhe = { path = "../../tfhe-rs/tfhe", features = [
#     "boolean",
#     "shortint",
#     "integer",
#     "aarch64-unix",
#     "zk-pok-experimental", ]  }

[patch.crates-io]
tfhe = { git = "https://github.com/shuklaayush/tfhe-rs.git", branch = "fix/crs-pub", features = [
    "boolean",
    "shortint",
    "integer",
    "aarch64-unix",
    "zk-pok-experimental", ]  }
